# Rpg

./: .gitignore  CMakeLists.txt  diag.drawio
Executable/: CMakeLists.txt
Executable/RpgTest/: CMakeLists.txt
Executable/RpgTest/src/: main.cpp
Rpg/: .gitignore  CMakeLists.txt
Rpg/include/: Combat.hpp  Creature.hpp  Foo.hpp  Level.hpp  Statistic.hpp
Rpg/src/: Combat.cpp  Creature.cpp  Foo.cpp  Level.cpp  Statistic.cpp
Rpg/uts/: CMakeLists.txt  Foo_tests.cpp
cmake/: GTest.cmake
obsidian-Rpg/: CMakeLists.txt  Rpg - Ala dupa konia.md  Stworzenia.md  Umiejetnosci.md  xp , lvl, ewolucje.md
obsidian-Rpg/include/: Foo.hpp
obsidian-Rpg/src/: Foo.cpp
obsidian-Rpg/uts/: FooTests.cpp
